force-app/main/default/objects/AI_Prompt__c/AI_Prompt__c.object-meta.xml
<CustomObject>
    <label>Prompt</label>
    <nameField>
        <label>AI Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prompts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>