force-app/main/default/objects/AI_Prompt__c/fields/Agentic_Function_Class__c.field-meta.xml
<CustomField>
    <fullName>Agentic_Function_Class__c</fullName>
    <label>Agentic Function Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>