force-app/main/default/objects/AI_Prompt__c/fields/AI_Connection__c.field-meta.xml
<CustomField>
    <fullName>AI_Connection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AI Model</label>
    <referenceTo>AI_Connection__c</referenceTo>
    <relationshipLabel>AI Prompts</relationshipLabel>
    <relationshipName>AI_Prompts</relationshipName>
    <type>Lookup</type>
</CustomField>