force-app/main/default/objects/AI_Prompt__c/fields/AI_Data_Extraction_Mapping__c.field-meta.xml
<CustomField>
    <fullName>AI_Data_Extraction_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the mapping created for the prompt</inlineHelpText>
    <label>Data Context Mapping</label>
    <referenceTo>AI_Data_Extraction_Mapping__c</referenceTo>
    <relationshipLabel>AI Prompts</relationshipLabel>
    <relationshipName>AI_Prompts</relationshipName>
    <type>Lookup</type>
</CustomField>