force-app/main/default/objects/AI_Prompt__c/fields/AI_Locale_Automation__c.field-meta.xml
<CustomField>
    <fullName>AI_Locale_Automation__c</fullName>
    <inlineHelpText>Choose locale for Flows, Mass Processing, and APIs, affecting date, time, and number formats.

Company Default: Applies standard locale for consistent automated formatting.
Record Owner&apos;s Locale: Adopts record owner&apos;s settings for personalized formatting.</inlineHelpText>
    <label>Locale - Automation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Default</fullName>
            </value>
            <value>
                <fullName>Record Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>