force-app/main/default/objects/AI_Prompt__c/fields/AI_Locale_GPTfy_Console__c.field-meta.xml
<CustomField>
    <fullName>AI_Locale_GPTfy_Console__c</fullName>
    <inlineHelpText>Set locale for the GPTfy console, affecting date, time, and number formats.

Active User: Uses current user&apos;s locale for a personalized experience.
Company Default: Applies standard organization locale for consistency.</inlineHelpText>
    <label>Locale - GPTfy Console</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active User</fullName>
            </value>
            <value>
                <fullName>Company Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>