force-app/main/default/objects/AI_Prompt__c/fields/AI_Model_File_Processing__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_File_Processing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Model - File Processing</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Connection__c.Type__c</field>
            <operation>equals</operation>
            <value>File</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Connection__c</referenceTo>
    <relationshipLabel>Prompts (AI Model - File Processing)</relationshipLabel>
    <relationshipName>Prompts</relationshipName>
    <type>Lookup</type>
</CustomField>