force-app/main/default/objects/AI_Prompt__c/fields/Auto_Refresh_Duration__c.field-meta.xml
<CustomField>
    <fullName>Auto_Refresh_Duration__c</fullName>
    <label>Auto Refresh Duration (In Hours)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>