force-app/main/default/objects/AI_Prompt__c/fields/Custom_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Custom_Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow User Input</label>
    <type>Checkbox</type>
</CustomField>