force-app/main/default/objects/AI_Prompt__c/fields/Enable_Loopback__c.field-meta.xml
<CustomField>
    <fullName>Enable_Loopback__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows to test AI mass processing and troubleshoot AI connections by simulating responses as if they are generated by LLM.</inlineHelpText>
    <label>Enable Loopback</label>
    <type>Checkbox</type>
</CustomField>