force-app/main/default/objects/AI_Prompt__c/fields/Grounding_Content__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Content__c</fullName>
    <inlineHelpText>This category focuses on the style, clarity, and organization of responses. It includes guidelines on language usage, adherence to local conventions, and the structure of the response to ensure it is clear, direct, and easily understandable. These guidelines help in maintaining a professional and coherent communication style that enhances the effectiveness and accessibility of the information provided.</inlineHelpText>
    <label>Grounding - Content</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address all parts of a multi-part question.</fullName>
            </value>
            <value>
                <fullName>Aim for clarity over complexity.</fullName>
            </value>
            <value>
                <fullName>Avoid using absolutes, such as &quot;always&quot; or &quot;never&quot;.</fullName>
            </value>
            <value>
                <fullName>Avoid using passive voice.</fullName>
            </value>
            <value>
                <fullName>Avoid using slang or colloquial terms unless specifically asked.</fullName>
            </value>
            <value>
                <fullName>Only answer what has been asked for.</fullName>
            </value>
            <value>
                <fullName>Refrain from using first-person pronouns.</fullName>
            </value>
            <value>
                <fullName>Ensure all records are shown in the tables.</fullName>
            </value>
            <value>
                <fullName>Include border=&quot;1&quot; in all HTML table tags</fullName>
            </value>
            <value>
                <fullName>Add captions to each HTML table.</fullName>
            </value>
            <value>
                <fullName>Prioritize quality over speed in responses.</fullName>
            </value>
            <value>
                <fullName>Convert all internal CSS to inline CSS for the response.</fullName>
            </value>
            <value>
                <fullName>Use the following inline CSS for table header &apos;th&apos; style=&quot;background-color: #e1ebf7 color: #16325  padding: 0.5rem text-align: left&quot;</fullName>
            </value>
            <value>
                <fullName>Use the following inline CSS for caption = &quot;font-size: 1.0rem font-weight: bold padding: 0.5rem color: #5C5C5C text-align: left&quot;</fullName>
            </value>
            <value>
                <fullName>Dont add any &apos;\n&apos; characters in your HTML. Replace each &apos;\n&apos; with the HTML line break tag &lt;br&gt;. Ensure the rest of the text is properly wrapped in HTML tags, like &lt;p&gt; for paragraphs, to maintain the formatting.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>