force-app/main/default/objects/AI_Prompt__c/fields/Grounding_Ethical__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Ethical__c</fullName>
    <inlineHelpText>This category emphasizes ethical and safe communication. It focuses on producing respectful and responsible content, ensuring truthfulness, and avoiding any offensive or misleading information. It also prioritizes protecting individuals from physical, psychological, or informational harm. These guidelines advocate for dignified, conscientious communication, blending ethical principles with a commitment to safety and security in all interactions.</inlineHelpText>
    <label>Grounding - Ethical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avoid using emotive language.</fullName>
            </value>
            <value>
                <fullName>Do not exaggerate.</fullName>
            </value>
            <value>
                <fullName>Do not generate content that can be deemed offensive or inappropriate.</fullName>
            </value>
            <value>
                <fullName>Do not hallucinate.</fullName>
            </value>
            <value>
                <fullName>Do not use scare tactics.</fullName>
            </value>
            <value>
                <fullName>Prioritize safety and ethical considerations in your answers.</fullName>
            </value>
            <value>
                <fullName>Your response must be based on the information provided in the prompt.</fullName>
            </value>
            <value>
                <fullName>Use data from the provided JSON, linked by 18-digit IDs</fullName>
            </value>
            <value>
                <fullName>Task summary must always include names and titles of people involved</fullName>
            </value>
            <value>
                <fullName>Write summaries in third person and condense key points.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>