force-app/main/default/objects/AI_Prompt__c/fields/How_it_works__c.field-meta.xml
<CustomField>
    <fullName>How_it_works__c</fullName>
    <label>How it Works?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>