force-app/main/default/objects/AI_Prompt__c/fields/Include_Files__c.field-meta.xml
<CustomField>
    <fullName>Include_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Files</label>
    <type>Checkbox</type>
</CustomField>