force-app/main/default/objects/AI_Prompt__c/fields/Loopback_Message__c.field-meta.xml
<CustomField>
    <fullName>Loopback_Message__c</fullName>
    <label>Loopback Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>