force-app/main/default/objects/AI_Prompt__c/fields/Max_Output_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Output_Tokens__c</fullName>
    <label>Max Output Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>