force-app/main/default/objects/AI_Prompt__c/fields/Pre_Packaged__c.field-meta.xml
<CustomField>
    <fullName>Pre_Packaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Packaged?</label>
    <type>Checkbox</type>
</CustomField>