force-app/main/default/objects/AI_Prompt__c/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <label>Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>