force-app/main/default/objects/AI_Prompt__c/fields/Prompt_Command__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Command__c</fullName>
    <description>Generated based on other selections.</description>
    <label>Prompt Command</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>