force-app/main/default/objects/AI_Prompt__c/fields/Prompt_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Request_Id__c</fullName>
    <label>Prompt Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>