force-app/main/default/objects/AI_Prompt__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <description>Maintain prompt history and auto-generate versioned prompt files when activated</description>
    <label>Prompt Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>