force-app/main/default/objects/AI_Prompt__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improve Services</fullName>
            </value>
            <value>
                <fullName>Facilitate Customer Success</fullName>
            </value>
            <value>
                <fullName>Manage Stakeholders</fullName>
            </value>
            <value>
                <fullName>Optimize Renewals</fullName>
            </value>
            <value>
                <fullName>Boost Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>