force-app/main/default/objects/AI_Prompt__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>