force-app/main/default/objects/AI_Prompt__c/fields/Response_Validation_Condition__c.field-meta.xml
<CustomField>
    <fullName>Response_Validation_Condition__c</fullName>
    <label>Response Validation Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>