force-app/main/default/objects/AI_Prompt__c/fields/Response_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Validation_Message__c</fullName>
    <label>Response Validation Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>