force-app/main/default/objects/AI_Prompt__c/fields/Time_Saved_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Time_Saved_Coefficient__c</fullName>
    <label>Time Saved Coefficient</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>