force-app/main/default/objects/AI_Prompt__c/fields/Visibility_Condition__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Condition__c</fullName>
    <label>Visibility Condition</label>
    <type>TextArea</type>
</CustomField>