force-app/main/default/objects/AI_Prompt__c/fields/Visibility_Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Exception_Message__c</fullName>
    <defaultValue>&quot;This record does not match with the prompt&apos;s visibility condition.&quot;</defaultValue>
    <label>Visibility Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>