force-app/main/default/objects/AI_Prompt__c/validationRules/DataExtractionMappingChange.validationRule-meta.xml
<ValidationRule>
    <fullName>DataExtractionMappingChange</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(AI_Data_Extraction_Mapping__c)</errorConditionFormula>
    <errorMessage>Data Extraction mapping cannot be changed on Prompt once it has been created.</errorMessage>
</ValidationRule>