force-app/main/default/objects/AI_Prompt__c/validationRules/FileProcessingModelBlankWithIncludeFiles.validationRule-meta.xml
<ValidationRule>
    <fullName>FileProcessingModelBlankWithIncludeFiles</fullName>
    <active>true</active>
    <errorConditionFormula>Include_Files__c &amp;&amp; 
ISBLANK(AI_Model_File_Processing__c) &amp;&amp;
NOT(Pre_Packaged__c) /*Skipping the validation for Pre-packaged prompt to avoid any installation issues*/</errorConditionFormula>
    <errorDisplayField>AI_Model_File_Processing__c</errorDisplayField>
    <errorMessage>&quot;AI Model - File Processing&quot; cannot be blank with Include Files checked.</errorMessage>
</ValidationRule>