force-app/main/default/objects/AI_Prompt__c/listViews/Canvas_Prompt_Active.listView-meta.xml
<ListView>
    <fullName>Canvas_Prompt_Active</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Visibility_Condition__c</columns>
    <columns>Profiles__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Canvas</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Canvas Prompt -  Active</label>
</ListView>