force-app/main/default/objects/AI_Prompt__c/listViews/Prepackaged_Prompts.listView-meta.xml
<ListView>
    <fullName>Prepackaged_Prompts</fullName>
    <columns>NAME</columns>
    <columns>Pre_Packaged__c</columns>
    <columns>Object__c</columns>
    <columns>AI_Data_Extraction_Mapping__c</columns>
    <columns>AI_Connection__c</columns>
    <columns>Description__c</columns>
    <columns>Prompt_Command__c</columns>
    <columns>Status__c</columns>
    <columns>Purpose__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pre_Packaged__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Prepackaged Prompts</label>
</ListView>