force-app/main/default/objects/AI_Prompt__c/listViews/Prompt_updated.listView-meta.xml
<ListView>
    <fullName>Prompt_updated</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Prompt updated</label>
</ListView>