force-app/main/default/objects/AI_Prompt__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Prompts</label>
</ListView>