force-app/main/default/objects/AI_Prompt__c/listViews/Updated_prompts.listView-meta.xml
<ListView>
    <fullName>Updated_prompts</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Updated prompts</label>
</ListView>